--- a/roles/basic/tasks/main.yaml
+++ b/roles/basic/tasks/main.yaml
@@ -3,6 +3,7 @@
 - name: Install list of packages
   apt: pkg={{ item }} state=present
   with_items: 
+  - default-jre
   - python-minimal
   - python2.7-dev
   - git 
